--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>JavaScript GraphQL Client Example</title>
-    <meta name="description" content="JavaScript GraphQL Client example">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont,
-                'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-                'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-    </style>
-</head>
-
-<body>
-    <h2>Output: </h2>
-    <div class="output"></div>
-    <script src="/js-graphql-client-example/client.948b9011.js"></script>
-</body>
-
-</html>
+<!doctype html><html class="no-js" lang="en"> <head> <meta charset="utf-8"> <meta http-equiv="x-ua-compatible" content="ie=edge"> <title>JavaScript GraphQL Client Example</title> <meta name="description" content="JavaScript GraphQL Client example"> <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <style>body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}</style> </head> <body> <h2>Output: </h2> <div class="output"></div> <script src="/js-graphql-client-example/client.a6649f29.js"></script> </body> </html>
